Fixed sizing and spacing in the header, logo, search bar and nav bar

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -130,29 +130,28 @@ hgroup span {
 }
 
 .searchbar {
-
   border-radius: 4px;
   font-size: 14px;
   border: 1px solid grey;
-  // height: 34px;
-  margin-left: 40px;
+  margin-left: 10px;
   display: flex;
   flex-direction: row;
-  // box-sizing: border-box;
-  height: 35px;
+  height: 30px
 }
 .search-field {
-  width: 420px;
-  height: 35px;
-  box-sizing: border-box;
-  border-radius: 4px;
-  padding: 15px;
-  font-size: 18px;
-  vertical-align: 3px;
-  box-shadow: inset 0 1px 2px #E9E9E8, 0 0 0 1000px #fbfbfa inset;
-  border: 1px solid #CFCBC8;
-  font-weight: 200;
+ width: 380px;
+ height: 30px;
+ box-sizing: border-box;
+ border-radius: 4px;
+ padding: 10px;
+ font-size: 18px;
+ vertical-align: 3px;
+ box-shadow: inset 0 0.5px 2px #E9E9E8, 0 0 0 1000px #fbfbfa inset;
+ border: .5px solid #CFCBC8;
+ font-weight: 200;
 }
+
+
 
 .searchbox {
   display: flex;
@@ -163,15 +162,15 @@ hgroup span {
 .search-button {
   color: white;
   background-color: #f45800;
-  height: 22px;
-  line-height: 17px;
+  height: 17px;
+  line-height: 10px;
   padding: 7px 15px 6px 15px;
   border-radius: 4px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   font-size: 18px;
   position: relative;
-  font-size: 18px;
+  font-size: 15px;
   display: flex;
   flex-direction: row;
 }
