--- a/app/assets/stylesheets/mainpage.scss
+++ b/app/assets/stylesheets/mainpage.scss
@@ -79,7 +79,7 @@
   display: flex;
   justify-content: center;
   width: 500px;
-  height: 370px;
+  height: 320px;
   border: 1px solid green;
   margin: 20px;
   flex-direction: column;
